--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+numpy
 matplotlib
 six
 scipy
@@ -10,6 +11,6 @@ pandas
 parameterized
 tqdm
 statsmodels
-tf-agents==0.7.1
-scikit-posthocs==0.6.7
+# scikit-posthocs
 arch==4.17
+d3rlpy==1.0.0
