--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,105 @@
-numpy
-matplotlib
-six
-scipy
-Cython
-seaborn
-gym
-path.py
-plotly
-pandas
-parameterized
-tqdm
-statsmodels
-# scikit-posthocs
+absl-py==1.3.0
 arch==4.17
+astunparse==1.6.3
+attrs==22.1.0
+cachetools==5.2.0
+certifi==2022.9.24
+charset-normalizer==2.1.1
+chex==0.1.5
+cloudpickle==2.2.0
+commonmark==0.9.1
+contourpy==1.0.6
+cycler==0.11.0
+Cython==0.29.32
+decorator==5.1.1
+dill==0.3.6
+distrax==0.1.2
+dm-acme==0.3.0
+dm-env==1.5
+dm-haiku==0.0.9
+dm-launchpad==0.4.1
+dm-reverb==0.6.1
+dm-sonnet==2.0.0
+dm-tree==0.1.7
+flatbuffers==2.0.7
+flax==0.6.2
+fonttools==4.38.0
+future==0.18.2
+gast==0.4.0
+google-auth==2.14.1
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+grpcio==1.50.0
+gym==0.21.0
+gym-notices==0.0.8
+h5py==3.7.0
+idna==3.4
+importlib-metadata==5.0.0
+importlib-resources==5.10.0
+install==1.3.5
+jax==0.3.25
+jaxlib==0.3.25
+jmp==0.0.2
+keras==2.7.0
+Keras-Preprocessing==1.1.2
+kiwisolver==1.4.4
+libclang==14.0.6
+Markdown==3.4.1
+MarkupSafe==2.1.1
+matplotlib==3.6.2
+mock==4.0.3
+msgpack==1.0.4
+numpy==1.23.5
+oauthlib==3.2.2
+opt-einsum==3.3.0
+optax==0.1.4
+packaging==21.3
+pandas==1.5.2
+parameterized==0.8.1
+path==16.5.0
+path.py==12.5.0
+patsy==0.5.3
+Pillow==9.3.0
+plotly==5.11.0
+portpicker==1.5.2
+promise==2.3
+property-cached==1.6.4
+protobuf==3.19.5
+psutil==5.9.4
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+Pygments==2.13.0
+pyparsing==3.0.9
+python-dateutil==2.8.2
+pytz==2022.6
+PyYAML==6.0
+requests==2.28.1
+requests-oauthlib==1.3.1
+rich==12.6.0
+#rlax==0.1.4
+rsa==4.9
+scipy==1.9.3
+seaborn==0.12.1
+six==1.16.0
+statsmodels==0.13.5
+tabulate==0.9.0
+tenacity==8.1.0
+tensorboard==2.11.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.7.0
+tensorflow-datasets==4.4.0
+tensorflow-estimator==2.7.0
+tensorflow-io-gcs-filesystem==0.28.0
+tensorflow-metadata==1.11.0
+tensorflow-probability==0.15.0
+tensorstore==0.1.28
+termcolor==2.1.1
+toolz==0.12.0
+tqdm==4.64.1
+trfl==1.2.0
+typing-extensions==4.4.0
+urllib3==1.26.12
+Werkzeug==2.2.2
+wrapt==1.14.1
+zipp==3.10.0
